--- a/03/package.json
+++ b/03/package.json
@@ -1,15 +1,10 @@
 {
   "name": "03",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "browser-sync start -s -f ./"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "browser": "^0.2.6",
-    "sync": "^0.2.5"
+  "devDependencies": {
+    "browser-sync": "^2.26.0"
   }
 }
